fix: Preloader image size on Safari & loading time
Problems:
The preloader image size on iOS Safari devices is 100% of the screen
width.
Loading time for the preloader is too quick, giving an unnatual feeling
of transition.

Solutions:
Added a max-height to the preloader image.
Increased loader fade out time from 100 to 500 ms.

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -21,6 +21,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  & img {
+    max-height: 200px;
+  }
 }
 
 img {
